# rust-todo

./: Cargo.toml  DEBUG_MODE.md  FEATURES_TO_IMPLEMENT.md  ReadMe.md  STRUCTURE.md  TUI_README.md  tasks.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
src/todo_lib/: input_reader.rs  lib.rs  loop_control.rs  output_writer.rs  task.rs  task_filter.rs  todo_controller.rs  todo_list.rs  ui_event.rs
src/todo_lib/controller/: application_controller.rs  command_controller.rs  command_controller_registry.rs  command_controller_type.rs  debug_command_controller.rs  debug_command_handler.rs  debug_controller.rs  general_command_controller.rs  general_command_handler.rs  mod.rs  task_command_controller.rs  task_command_handler.rs  task_generator.rs  todo_controller.rs  todo_manager.rs
src/todo_lib/models/: command_controller_result.rs  command_controller_type.rs  debug_command.rs  filter_builder.rs  general_command.rs  general_command_result.rs  id_parser.rs  loop_control.rs  mod.rs  overdue_filter.rs  parse_error.rs  priority.rs  project.rs  recurrence.rs  task.rs  task_filter.rs  task_sort.rs  task_statistics.rs  task_status.rs  todo_list.rs  ui_event.rs
src/todo_lib/persistence/: mod.rs  todo_list_storage.rs
src/todo_lib/tui/: app.rs  event.rs  mod.rs  ui.rs
tests/: basic_workflow_tests.rs  edge_case_tests.rs  filtering_tests.rs  integration_tests.rs  parse_error_tests.rs  project_tests.rs  sorting_tests.rs  subtask_tests.rs  task_command_input_parser_tests.rs  task_command_output_manager_tests.rs  todo_list_extended_tests.rs
(+53 files in other folders)
