[package]
name = "rust-project-1"
version = "0.1.0"
edition = "2021"

[lib]
name = "todo_manager"
path = "src/todo_lib/lib.rs"

[dependencies]
colored = "3.0.0"
rand = "0.9.2"
# Enable serde support for chrono to allow (de)serializing dates
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
